--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ sentencepiece = "^0.1.99"
 ipykernel = "^6.29.0"
 datasets = "^2.16.1"
 torch = "^2.1.2"
+evaluate = "^0.4.1"
+accelerate = "^0.26.1"
 
 
 [build-system]
