--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ datasets = "^2.16.1"
 torch = "^2.1.2"
 scikit-learn = "^1.4.1.post1"
 accelerate = "^0.27.2"
+sentence-transformers = "^2.4.0"
 
 
 [build-system]
